# Systeme_gestion_energetique_P4_M1

./: .gitignore  Dockerfile  README.md  criteres_acceptation_projet_4.md  docker-compose.yml  document_sre_projet_4.md  grafana-dashboard.json  grafana-slo-dashboard.json  prometheus.yml  pyproject.toml  requirements.txt  user_stories_projet_4.md
.github/workflows/: main.yml
api/: main.py
dashboard/: app.py
models/: indicators.py  optimization.py
scripts/: kpi_from_csv.py  simulate_days.py
sensors/: virtual_sensors.py
src/energy_management/: __init__.py  cli.py  data_sources.py  dispatch.py  indicators.py  models.py  optimization.py  simulator.py
src/energy_management.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/energy_management_p4.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_indicators.py  test_optimization.py  test_scripts.py
